# teeleaves

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  allocator.template.yaml
client/: Cargo.toml
client/src/: mod.rs
common/: Cargo.toml
common/src/: lib.rs
enclave/: Cargo.toml
enclave/src/: main.rs  server.rs
host/: Cargo.toml
host/src/: lib.rs  server.rs
host/src/server/: stream.rs
scripts/: enclave.sh  install-host.sh
