[package]
name = "teeleaves-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "teeleaves-client"
path = "bin/client.rs"

[dependencies]
clients = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
clobs = { workspace = true }
alloy-primitives = "1.0.0"
rand = "0.9.1"
serde_json = { workspace = true }
teeleaves-common = { workspace = true }

ark-std = { version = "0.5.0", features = ["parallel"] }
ark-ff = { version = "0.5.0", features = ["parallel", "asm"] }
ark-ec = { version = "0.5.0", features = ["parallel"] }
ark-crypto-primitives = { version = "0.5.0", features = ["parallel", "signature"] }
ark-serialize = "0.5.0"
ark-curve25519 = "0.5.0"
aes-gcm-siv = "0.11.1"
sha3 = "0.10.8"

aws-nitro-enclaves-nsm-api = { workspace = true }

attestation-doc-validation = "0.10.0"