[package]
name = "teeleaves-enclave"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
clobs = { workspace = true }
servers = { workspace = true }
alloy-primitives = "1.0.0"
clients = { workspace = true }
thiserror = { workspace = true }
parking_lot = "0.12.3"
rand_core = "0.6"
serde_json = { workspace = true }


# Protocol deps.
k256 = { workspace = true }
teeleaves-common = { workspace = true }


# Transport deps.
tokio-vsock = { workspace = true }
tokio = { workspace = true }
libc = "0.2.170"

# AWS Deps.
aws-nitro-enclaves-nsm-api = { workspace = true }
sha3 = "0.10.8"
