[package]
name = "teeleaves-enclave"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
clobs = { workspace = true }
servers = { workspace = true }
alloy-primitives = "1.0.0"
clients = { workspace = true }
thiserror = { workspace = true }
parking_lot = "0.12.3"
rand_core = "0.6"
serde_json = { workspace = true }

ark-std = { version = "0.5.0", features = ["parallel"] }
ark-ff = { version = "0.5.0", features = ["parallel", "asm"] }
ark-ec = { version = "0.5.0", features = ["parallel"] }
ark-serialize = "0.5.0"
ark-crypto-primitives = { version = "0.5.0", features = ["parallel", "signature"] }
ark-curve25519 = "0.5.0"
aes-gcm-siv = "0.11.1"

# Protocol deps.
k256 = { workspace = true }
teeleaves-common = { workspace = true }


# Transport deps.
tokio-vsock = { workspace = true }
tokio = { workspace = true }
libc = "0.2.170"

# AWS Deps.
aws-nitro-enclaves-nsm-api = { workspace = true }
sha3 = "0.10.8"
